# sdl2-demo

./: .gitignore  CMakeLists.txt  README.md  SDL2.cmake  cleanall.sh  demo.c  main.c  minimal.c
